--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
 		"windows": "rm -rf node_modules && electron-builder -w --publish always",
 		"mac": "rm -rf node_modules && electron-builder -m"
 	},
-
+	"devDependencies": {
+		"electron": "19.0.8",
+		"electron-builder": "^23.1.0"
+	},
 	"description": "A set of conversion tools",
 	"author": "Andrew",
 	"name": "multitools",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"license": "MIT",
 	"build": {
 		"productName": "MultiTools",
